--- a/index.css
+++ b/index.css
@@ -24,7 +24,8 @@ body,html {
     background-color: #fff;
     border-radius: 4px;
     box-shadow: 4px 4px 6px rgba(0,0,0,0.1);
-    width: 300px;
+    box-sizing: border-box;
+    padding: 15px;
     height: 60px;
     margin: auto;
     margin-top: 100px;
